kuch kr rhy hein

--- a/contact.html
+++ b/contact.html
@@ -7,5 +7,10 @@
   </head>
   <body>
     <h5>contact ha jani</h5>
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia tenetur
+      ratione soluta temporibus iusto eos esse, earum quos? Explicabo quaerat
+      unde quis maxime, totam at quidem suscipit. Quia, temporibus similique?
+    </p>
   </body>
 </html>
