--- a/index.html
+++ b/index.html
@@ -30,5 +30,12 @@
     <p>my extra code</p>
 
     <h1>what laga dala jani</h1>
+
+    <span
+      >Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam quaerat
+      numquam aut debitis omnis magni ratione laboriosam veniam consectetur
+      nisi. Sequi, ipsum in excepturi pariatur esse eius ad quas
+      obcaecati?</span
+    >
   </body>
 </html>
